test/library/standard/Math/isCloseBadType2.chpl
// Checks behavior when an int is provided
var a: int = 3;
var b: real = 4.2;

writeln(isClose(a, b));
